Fixed collapsed navbar menu not opening by adding jQuery support. Also added padding around the welcome quote in small device mode

--- a/css/main.css
+++ b/css/main.css
@@ -81,8 +81,15 @@ pre {
 }
 
 .welcome-quote {
-	padding-left:150px;
-  padding-right:150px;
+	padding-left:100px;
+  padding-right:100px;
+}
+
+@media(max-width: 770px) {
+  .welcome-quote {
+    padding-left:50px;
+    padding-right:50px;
+  }
 }
 
 strong {
@@ -248,11 +255,10 @@ u:hover {
   height:400px;
   color:white;
   
-	margin-top:10px;
+	margin-top:30px;
 	
 	overflow:hidden;
-	
-	margin-right: -10px;
+
 }
 
 .languages-div {
@@ -263,11 +269,10 @@ u:hover {
   height:400px;
   color:white;
   
-	margin-top:10px;
+	margin-top:30px;
 	
 	overflow:hidden;
 	
-	margin-left: -10px;
 }
 
 .hobbies-div {
@@ -278,11 +283,10 @@ u:hover {
   height:400px;
   color:white;
   
-	margin-top:10px;
+	margin-top:30px;
 	
 	overflow:hidden;
 	
-	margin-right: -10px;
 
 }
 
@@ -294,11 +298,10 @@ u:hover {
   height:400px;
   color:white;
   
-	margin-top:10px;
+	margin-top:30px;
 	
 	overflow:hidden;
 	
-	margin-left: -10px;
 }
 
 .grow {
